--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Dashboard</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous"><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
     <input type="checkbox" id="nav-toggle">
@@ -33,7 +23,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="komens">
                 <span class="fas fa-tasks"></span>
               <span>ZNÁMKY</span>
               </a>
@@ -92,164 +82,42 @@
                       <td>Název Akce</td>
                       <td>Místo Konání</td>
                       <td>Datum Akce</td>
-                      <td>Status</td>
+                      
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Website</td>
-                      <td>Frontend</td>
-                       <td>10. 4. 2024</td>
-                      <td>
-                        <span class="status purple"></span>
-                        Review
-                      </td>
+                      <td>---</td>
+                      <td>---</td>
+                      <td>---</td>
                     </tr>
                     <tr>
-                      <td>Website</td>
-                      <td>Frontend</td>
+                       <td>---</td>
+                       <td>---</td>
+                       <td>---</td>
                       <td>
-                        <span class="status orange"></span>
-                        Pending
-                      </td>
                     </tr>
                     <tr>
-                      <td>Website</td>
-                      <td>Frontend</td>
-                      <td>
-                        <span class="status pink"></span>
-                        In Progress
-                      </td>
+                      <td>---</td>
+                      <td>---</td>
+                      <td>---</td>
                     </tr>
                     <tr>
-                      <td>Website</td>
-                      <td>Frontend</td>
-                      <td>
-                        <span class="status purple"></span>
-                        Review
-                      </td>
+                      <td>---</td>
+                      <td>---</td>
+                      <td>---</td>
                     </tr>
                     <tr>
-                      <td>Website</td>
-                      <td>Frontend</td>
-                      <td>
-                        <span class="status pink"></span>
-                        In Progress
-                      </td>
+                       <td>---</td>
+                      <td>---</td>
+                      <td>---</td>
                     </tr>
                   </tbody>
-
                 </table>
                 </div>
               </div>
-
             </div>
-
           </div>
-          <div class="customers">
-            <div class="card">
-              <div class="card-header">
-                  <h2>New Customers</h2>
-                  <button>See all <span class="fas fa-arrow-right"></span> </button>
-              </div>
-              <div class="card-body">
-                <div class="customer">
-                  <div class="info">
-                    <img src="https://bit.ly/3bvT89p" height="40px" width="40px" alt="customer">
-                    <div>
-                      <h4>Malik Abushabab</h4>
-                      <small>CEO</small>
-                    </div>
-                  </div>
-                  <div class="contact">
-                      <span class="fas fa-user-circle"></span>
-                      <span class="fas fa-comment"></span>
-                      <span class="fas fa-phone-alt"></span>
-                    </div>
-                </div>
-                <div class="customer">
-                  <div class="info">
-                    <img src="https://bit.ly/3bvT89p" height="40px" width="40px" alt="customer">
-                    <div>
-                      <h4>Malik Abushabab</h4>
-                      <small>CEO</small>
-                    </div>
-                  </div>
-                  <div class="contact">
-                      <span class="fas fa-user-circle"></span>
-                      <span class="fas fa-comment"></span>
-                      <span class="fas fa-phone-alt"></span>
-                    </div>
-                </div>
-                <div class="customer">
-                  <div class="info">
-                    <img src="https://bit.ly/3bvT89p" height="40px" width="40px" alt="customer">
-                    <div>
-                      <h4>Malik Abushabab</h4>
-                      <small>CEO</small>
-                    </div>
-                  </div>
-                  <div class="contact">
-                      <span class="fas fa-user-circle"></span>
-                      <span class="fas fa-comment"></span>
-                      <span class="fas fa-phone-alt"></span>
-                    </div>
-                </div>
-                <div class="customer">
-                  <div class="info">
-                    <img src="https://bit.ly/3bvT89p" height="40px" width="40px" alt="customer">
-                    <div>
-                      <h4>Malik Abushabab</h4>
-                      <small>CEO</small>
-                    </div>
-                  </div>
-                  <div class="contact">
-                      <span class="fas fa-user-circle"></span>
-                      <span class="fas fa-comment"></span>
-                      <span class="fas fa-phone-alt"></span>
-                    </div>
-                </div>
-                <div class="customer">
-                  <div class="info">
-                    <img src="https://bit.ly/3bvT89p" height="40px" width="40px" alt="customer">
-                    <div>
-                      <h4>Malik Abushabab</h4>
-                      <small>CEO</small>
-                    </div>
-                  </div>
-                  <div class="contact">
-                      <span class="fas fa-user-circle"></span>
-                      <span class="fas fa-comment"></span>
-                      <span class="fas fa-phone-alt"></span>
-                    </div>
-                </div>
-                <div class="customer">
-                  <div class="info">
-                    <img src="https://bit.ly/3bvT89p" height="40px" width="40px" alt="customer">
-                    <div>
-                      <h4>Malik Abushabab</h4>
-                      <small>CEO</small>
-                    </div>
-                  </div>
-                  <div class="contact">
-                      <span class="fas fa-user-circle"></span>
-                      <span class="fas fa-comment"></span>
-                      <span class="fas fa-phone-alt"></span>
-                    </div>
-                </div>
-                <div class="customer">
-                  <div class="info">
-                    <img src="https://bit.ly/3bvT89p" height="40px" width="40px" alt="customer">
-                    <div>
-                      <h4>Malik Abushabab</h4>
-                      <small>CEO</small>
-                    </div>
-                  </div>
-                  <div class="contact">
-                      <span class="fas fa-user-circle"></span>
-                      <span class="fas fa-comment"></span>
-                      <span class="fas fa-phone-alt"></span>
-                    </div>
                 </div>
               </div>
             </div>
@@ -260,7 +128,4 @@
 
       </main>
     </div>
-<!-- partial -->
-  
-</body>
-</html>
+
